--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="footer__social">
             <a href="https://www.facebook.com/kartheek2004" class="footer__icon"><i class="bx bxl-facebook"></i></a>
             <a href="https://www.instagram.com/kartheek_dama" class="footer__icon"><i class="bx bxl-instagram"></i></a>
-            <a href="#" class="footer__icon"><i class="bx bxl-twitter"></i></a>
+            <a href="https://twitter.com/kartheek_dama" class="footer__icon"><i class="bx bxl-twitter"></i></a>
         </div>
         <p class="footer__copy">&#169; ADIT. All rigths reserved</p>
     </footer>
